--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -27,8 +27,9 @@
     --bg-primery: #2C49FEBD;
     --bg-white: white;
 
+    /* text-color */
+    --text-primery: #2C49FEBD;
 
-    /* font-family */
 
 }
 
