--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,17 +9,22 @@
     list-style-type: none;
     text-decoration: none !important;
     box-sizing: border-box;
-
+    scroll-behavior: smooth;
 }
 
 .container {
-    max-width: 1320px;
+    max-width: 1200px;
     padding-left: 12px;
     padding-right: 12px;
     margin-right: auto;
     margin-left: auto;
-
+  
+    
 }
+section{
+    overflow-x: hidden;
+}
+
 
 .mx_img {
     width: 90px;
@@ -784,19 +789,25 @@ textarea {
         padding-top: 24px;
     }
 
+    .mt_3 {
+        margin-top: 16px;
+    }
+
 
     label[for="meanmanu"] {
         width: 50px;
         height: 50px;
         z-index: 3;
+
     }
 
     label[for="meanmanu"]>span {
         width: 100%;
-        height: 12px;
+        height: 6px;
         display: flex;
         background-color: blue;
-        margin: 4px;
+        margin-top: 6px;
+        margin-left: 5px;
 
     }
 
